--- a/templates/country_year_information.html
+++ b/templates/country_year_information.html
@@ -58,11 +58,11 @@ Wins per Year
 	                    <td>{{ record[0] }}</td>
 	                    <td>{{ record[1] }}</td>
 	                    <td>{{ record[2] }}</td>
-	                    <td>{{ record[3] }}</td>
+	                    <td>{{ record[3] }} USD</td>
 	                    <td>{{ record[4] }}</td>
-	                    <td>{{ record[5] }}</td>
-	                    <td>{{ record[6] }}</td>
-	                    <td>{{ record[7] }}</td>
+	                    <td>{{ record[5] }} years</td>
+	                    <td>{{ record[6] }}%</td>
+	                    <td>{{ record[7] }} USD</td>
 	                </tr>
 
 	            {% endfor %}
